package org.example.app.models;

public enum CardType {
    SPELL, MONSTER
}
